--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -66,3 +66,12 @@
 //   --codeBg: #282c34
 //   --codeColor: #fff
 //   codeThemeDark()
+blockquote
+  font-size: 1rem
+  color: #000
+  border-left: 0.3rem solid #45af08
+  margin: 1rem 0
+  padding: 0.25rem 0 0.25rem 1rem
+  /*background-color: #cccccc2b*/
+  background: -webkit-gradient(linear, 0 0, 100% 100%, from(#32725C2D), to(#fafdfb))
+
