--- a/theme-vdoing/styles/index.styl
+++ b/theme-vdoing/styles/index.styl
@@ -157,11 +157,12 @@ kbd
   padding 0 0.15em
 
 blockquote
-  font-size 1rem
-  opacity .75
-  border-left .2rem solid rgba(100,100,100,.3)
-  margin 1rem 0
-  padding .25rem 0 .25rem 1rem
+  font-size: 1rem
+  color: #000
+  border-left: 0.4rem solid #45af08
+  margin: 1rem 0
+  padding: 0.25rem 0 0.25rem 1rem
+  background-color: #cccccc2b
 
   & > p
     margin 0
